<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:id="@+id/favAcc"
    >


    <ImageView
        android:id="@+id/imageavatar"
        android:layout_width="0dp"

        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="367dp"
        android:layout_height="229dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageavatar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="47dp"
                android:layout_height="49dp"
                android:layout_marginTop="68dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/location_ic" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="49dp"
                android:layout_height="41dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView11"
                app:srcCompat="@drawable/phone_ic" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="49dp"
                android:layout_height="39dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12"
                app:srcCompat="@drawable/ic_person_add_black_24dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="84dp"
                android:text="California"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/pizza_hut"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.008"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:text="@string/somthing_gmail_com"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.008"
                app:layout_constraintStart_toEndOf="@+id/imageView13"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="194dp"
                android:layout_height="33dp"
                android:layout_marginTop="16dp"
                android:text="card_name"
                app:layout_constraintBottom_toTopOf="@+id/imageView11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="379dp"
        android:layout_height="136dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.45">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_dedscription" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
   android:textColor="#FFFFFF"
    android:textSize="35sp"
        android:layout_marginStart="8dp"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/imageavatar"
        app:layout_constraintStart_toStartOf="@+id/imageavatar" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addToFavBtn"
        android:layout_width="73dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:src="@drawable/fav_def"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>